--- a/package.json
+++ b/package.json
@@ -36,8 +36,13 @@
   },
   "homepage": "https://github.com/interledgerjs/ilp-pluginproxy#readme",
   "dependencies": {
+    "@grpc/proto-loader": "^0.3.0",
     "debug": "^3.1.0",
+    "google-protobuf": "^3.6.1",
+    "grpc": "^1.15.1",
     "ilp-compat-plugin": "^2.0.3",
+    "ilp-connector": "^22.1.0",
+    "ilp-grpc": "github:matdehaast/ilp-grpc",
     "ilp-plugin-btp": "^1.1.8"
   },
   "devDependencies": {
@@ -61,8 +66,8 @@
     "ts-node": "^4.1.0",
     "tslint": "^5.8.0",
     "tslint-config-standard": "^7.0.0",
-    "typedoc": "^0.9.0",
-    "typescript": "^2.6.2"
+    "typedoc": "^0.12.0",
+    "typescript": "^2.9.2"
   },
   "nyc": {
     "check-coverage": true,
