--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 /npm-debug.log
 /.nyc_output
 /coverage/
+
+# Compiled Files
 /src/*.js
 /src/*.js.map
 /src/*.d.ts
+/test/*.js
+/test/*.js.map
+/test/*.d.ts
