--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "npm run schema-to-tsd && tsc",
     "prepare": "npm run build",
     "pretest": "npm run build",
+    "schema-to-tsd": "node scripts/build_schema_types",
     "test": "nyc mocha",
     "lint": "tslint --project .",
     "codecov": "codecov",
@@ -36,6 +37,7 @@
   },
   "homepage": "https://github.com/interledgerjs/ilp-pluginproxy#readme",
   "dependencies": {
+    "bignumber.js": "^8.0.1",
     "debug": "^3.1.0",
     "ilp-compat-plugin": "^2.0.3",
     "ilp-connector": "^22.1.0",
@@ -54,6 +56,7 @@
     "codecov": "^3.0.0",
     "gh-pages": "^1.1.0",
     "ilp-protocol-ildcp": "^1.0.0",
+    "json-schema-to-typescript": "^6.0.1",
     "mocha": "^4.1.0",
     "mocha-typescript": "^1.1.12",
     "mock-require": "^2.0.2",
