feat: create account service for out of process grpc plugin. create middleware manager and use it in in-process and out of process grpc plugin.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,9 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "inlineSources": true,
-    "strictNullChecks": true,
+    "strict": true,
     "suppressImplicitAnyIndexErrors": true,
   },
-  "types": [],
   "compileOnSave": true,
   "include": [
     "src/**/*.ts",
