--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
     "debug": "^3.1.0",
     "ilp-compat-plugin": "^2.0.3",
     "ilp-connector": "^22.1.0",
+    "ilp-logger": "^1.1.2",
     "ilp-plugin-btp": "^1.1.8",
-    "ilp-protocol-btp3": "github:matdehaast/ilp-protocol-btp3#mat-grpc"
+    "ilp-protocol-btp3": "github:matdehaast/ilp-protocol-btp3#mat-grpc",
+    "ilp-transport-grpc": "github:interledgerjs/ilp-transport-grpc",
+    "prom-client": "^11.2.0"
   },
   "devDependencies": {
     "@types/chai": "^4.0.10",
