--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "debug": "^3.1.0",
     "ilp-logger": "^1.1.2",
     "ilp-packet": "^3.0.5",
+    "ilp-store": "^1.0.1",
     "ilp-transport-grpc": "github:interledgerjs/ilp-transport-grpc",
     "prom-client": "^11.2.0"
   },
