--- a/package.json
+++ b/package.json
@@ -44,34 +44,33 @@
     "bignumber.js": "^8.0.1",
     "debug": "^3.1.0",
     "ilp-logger": "^1.1.2",
-    "ilp-packet": "^3.0.5",
+    "ilp-packet": "^3.0.6",
     "ilp-store": "^1.0.1",
-    "ilp-transport-grpc": "github:interledgerjs/ilp-transport-grpc",
     "prom-client": "^11.2.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.10",
-    "@types/debug": "0.0.30",
-    "@types/long": "^3.0.32",
-    "@types/mocha": "^2.2.45",
+    "@types/chai": "^4.1.7",
+    "@types/debug": "^0.0.31",
+    "@types/long": "^4.0.0",
+    "@types/mocha": "^5.2.5",
     "@types/mock-require": "^2.0.0",
-    "@types/node": "^8.5.2",
-    "@types/sinon": "^4.1.2",
-    "chai": "^4.1.2",
-    "codecov": "^3.0.0",
-    "gh-pages": "^1.1.0",
-    "ilp-protocol-ildcp": "^1.0.0",
-    "json-schema-to-typescript": "^6.0.1",
-    "mocha": "^4.1.0",
-    "mocha-typescript": "^1.1.12",
-    "mock-require": "^2.0.2",
-    "nyc": "^11.4.1",
-    "sinon": "^4.1.3",
+    "@types/node": "^10.12.10",
+    "@types/sinon": "^5.0.7",
+    "chai": "^4.2.0",
+    "codecov": "^3.1.0",
+    "gh-pages": "^2.0.1",
+    "ilp-protocol-ildcp": "^2.0.0",
+    "json-schema-to-typescript": "^6.0.2",
+    "mocha": "^5.2.0",
+    "mocha-typescript": "^1.1.17",
+    "mock-require": "^3.0.2",
+    "nyc": "^13.1.0",
+    "sinon": "^7.1.1",
     "source-map-support": "^0.5.9",
-    "ts-node": "^4.1.0",
-    "tslint": "^5.8.0",
-    "tslint-config-standard": "^7.0.0",
-    "typescript": "^2.6.2"
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.1.6"
   },
   "nyc": {
     "check-coverage": true,
